Hide overflow, make boxes scrollable, fixes issue #4

--- a/css/boxes.css
+++ b/css/boxes.css
@@ -1,6 +1,8 @@
 /* Customize boxes */
 div#boxes div.box-content {
-    /* General stylings */
+    position: relative;
+    height: 100%;
+    overflow: auto;
 }
     div#boxes div.box-content ul {
         list-style-type: none;
